# django-cookiecutter

./: .pre-commit-config.yaml  pyproject.toml
django_cookiecutter/: asgi.py  settings.py  urls.py  wsgi.py
users/: admin.py  forms.py  managers.py  models.py
users/migrations/: 0001_initial.py  0002_alter_customuser_managers_remove_customuser_username.py
users/tests/: test_models.py
