[tool.poetry]
name = "django-cookiecutter"
version = "0.1.0"
description = ""
authors = ["Pawel <pawel@bartczak.tech>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
django = "^5.1.6"
django-environ = "^0.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
