[tool.poetry]
name = "django-cookiecutter"
version = "0.1.0"
description = ""
authors = ["Pawel <pawel@bartczak.tech>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
django = "^5.1.6"
django-environ = "^0.12.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-django = "^4.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "django_cookiecutter.settings"
python_files = ["tests.py",  "test_*.py",  "*_tests.py"]