[tool.poetry]
name = "django-cookiecutter"
version = "0.1.0"
description = ""
authors = ["Pawel Bartczak <pawel@bartczak.tech>"]
readme = "README.md"

[project]
# Support Python 3.13+.
requires-python = ">=3.13"

[tool.poetry.dependencies]
python = "^3.13"
django = "^5.1.6"
django-environ = "^0.12.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-django = "^4.10.0"
ruff = "^0.9.6"
pre-commit = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "django_cookiecutter.settings"
python_files = ["tests.py",  "test_*.py",  "*_tests.py"]

[tool.ruff]
exclude = ["manage.py", "asgi.py", "wsgi.py", "*/migrations/"]
line-length = 120
indent-width = 4

[tool.ruff.format]
quote-style = "double"



# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

line-ending = "auto"

[tool.ruff.lint]
select = ["ALL"]